# NumericMatrixProcessor

./: .gitignore  .pylintrc  README.md  course-remote-info.yaml  pyproject.toml  requirements-dev.txt  requirements-setup.txt  setup.py
.github/workflows/: python-package.yml
Numeric Matrix Processor/Addition/: task-info.yaml
Numeric Matrix Processor/Determined_/: task-info.yaml
Numeric Matrix Processor/Inverse matrix/: task-info.yaml
Numeric Matrix Processor/Matrix by matrix multiplication/: task-info.yaml
Numeric Matrix Processor/Multiplication by number/: task-info.yaml
Numeric Matrix Processor/Transpose/: task-info.yaml
Numeric Matrix Processor/task/processor/: processor.py
Problems/: lesson-info.yaml
Problems/Accessing elements of a matrix/: task-info.yaml
Problems/Length/: task-info.yaml
Problems/String tricks/: main.py  task-info.yaml
Problems/The average of all numbers/: main.py  task-info.yaml
Problems/Vowel count/: main.py  task-info.yaml
Problems/snake_case/: main.py  task-info.yaml
numeric_matrix_processor/: matrix.py  matrix_generators.py
scripts/: build.bat  setup.bat
src/numeric_matrix_processor/: matrix.py
tests/matrixes/: conftest.py  test_matrix.py  test_matrix_determinant.py  test_matrix_inverse.py  test_matrix_operations.py  test_matrix_transpositions.py
