[build-system]
requires = ["poetry_core>=1.1.4"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "NumericMatrixProcessor"
version = "0.1.0"
description = "JetBrainAcademy Project - Doind a matrix calculator from scratch."
authors = ["Milan Assuied"]
readme = "README.md"
repository = "https://github.com/assuiedmilan/NumericMatrixProcessor.git"
homepage = "https://hyperskill.org/projects/96"

packages = [
    { include = "numeric_matrix_processor"}
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-lazy-fixture = "*"
pytest-mock = "*"
mock = "*"
sphinx = "*"
sphinx_rtd_theme = "*"
pylint = "*"